<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="50dp">

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:paddingTop="20dp"
        android:src="@drawable/image_icon"
        android:alpha="0.1"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/DetailImage"/>

    <ProgressBar
        android:id="@+id/detailLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailImage"
        app:layout_constraintBottom_toBottomOf="@id/detailImage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"

        android:visibility="visible"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/detailTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/detailImage"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/DetailTime"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/detailCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detailTime"
        app:layout_constraintTop_toBottomOf="@id/detailImage"

        android:text="@string/DetailCreator"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="@string/DetailTitle"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/detailTime" />

    <TextView
        android:id="@+id/detailContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        app:layout_constraintTop_toBottomOf="@id/detailTitle"
        android:padding="10dp"

        android:text="@string/DetailContent"
        android:textSize="23sp"/>

    <EditText
        android:id="@+id/detailAttendeesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        app:layout_constraintTop_toBottomOf="@+id/detailContent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/DetailAttendeesCount"
        android:textStyle="italic"
        android:background="@null"
        android:clickable="true"
        android:focusable="false"/>

    <Button
        android:id="@+id/detailJoinButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/detailAttendeesCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailAttendeesCount"
        app:layout_constraintStart_toEndOf="@+id/detailAttendeesCount"

        android:enabled="false"
        android:text="@string/DetailJoinButton"/>

    <Button
        android:id="@+id/detailJoinedButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/detailAttendeesCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailAttendeesCount"
        app:layout_constraintStart_toEndOf="@+id/detailAttendeesCount"

        android:enabled="false"
        android:visibility="gone"
        android:text="@string/DetailJoinedButton"/>

    <Button
        android:id="@+id/detailStorageButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/detailAttendeesCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailAttendeesCount"
        app:layout_constraintStart_toEndOf="@+id/detailAttendeesCount"

        android:enabled="false"
        android:visibility="gone"
        android:text="@string/DetailStorageButton"/>

    <TextView
        android:id="@+id/detailWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailAttendeesCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/DetailWarning"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>