<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateActivity">

    <ImageView
        android:id="@+id/createImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/image_icon"
        android:contentDescription="@string/CreateImage"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/createEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/createImage"
        app:layout_constraintEnd_toEndOf="parent"

        android:typeface="monospace"
        android:background="@null"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date"
        android:gravity="center"
        android:textSize="30sp"
        android:hint="@string/CreateEventDate"/>

    <TimePicker
        android:id="@+id/createEventClock"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:layout_constraintStart_toEndOf="@id/createImage"
        app:layout_constraintTop_toBottomOf="@id/createEventDate"
        app:layout_constraintEnd_toEndOf="parent"

        android:timePickerMode="spinner" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/createImage"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/createEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createImage"
        app:layout_constraintStart_toStartOf="parent"

        android:gravity="start"
        android:inputType="text"
        android:padding="10dp"
        android:background="@null"
        android:hint="@string/CreateEventTitle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/createEventTitle"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/createEventContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createEventTitle"

        android:padding="10dp"
        android:gravity="top"
        android:background="@null"
        android:hint="@string/CreateEventContent"/>


    <ImageButton
        android:id="@+id/createCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"

        android:contentDescription="@string/CreateCreateButton"
        android:background="@drawable/create_button_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/createCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="40dp"

        android:contentDescription="@string/CreateCreateButton"
        android:background="@drawable/create_button2_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>