<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0.2"

            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/profile_imageborder"
            android:src="@drawable/empty_profile"/>

        <ProgressBar
            android:id="@+id/profileLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/profileImage"
            app:layout_constraintTop_toTopOf="@id/profileImage"
            app:layout_constraintBottom_toBottomOf="@id/profileImage"
            app:layout_constraintEnd_toEndOf="@id/profileImage"
            android:layout_marginTop="80dp"

            android:visibility="visible"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/profileLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage"

            android:text="LOGOUT"/>

        <TextView
            android:id="@+id/profileUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileLogout"

            android:textSize="18sp"
            android:text="@string/ProfileUserId"/>

        <TextView
            android:id="@+id/profileUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profileUserId"
            app:layout_constraintStart_toStartOf="@+id/profileUserId"

            android:textSize="18sp"
            android:text="@string/ProfileUserName"/>

        <ImageButton
            android:id="@+id/profileEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/profileUserName"
            app:layout_constraintTop_toTopOf="@id/profileUserName"
            app:layout_constraintBottom_toBottomOf="@id/profileUserName"

            android:visibility="gone"
            android:background="@color/colorTransparent"
            android:src="@drawable/edit_button"/>

        <TextView
            android:id="@+id/profileParticipationCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profileUserName"
            app:layout_constraintStart_toStartOf="@+id/profileUserId"

            android:textSize="18sp"
            android:text="@string/ProfileParticipationCount"/>

        <TextView
            android:id="@+id/profileCreatedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/profileParticipationCount"
            app:layout_constraintStart_toStartOf="@+id/profileUserId"

            android:textSize="18sp"
            android:text="@string/ProfileCreatedCount"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profileEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/cardview_light_background"
            android:background="@color/colorPrimary"
            android:text="@string/ProfileEventTitle"/>

        <Switch
            android:id="@+id/profileSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profileEventTitle"
            app:layout_constraintBottom_toBottomOf="@+id/profileEventTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileListLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profileTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:background="@color/colorTab"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/profileViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileTab"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>